--- a/download_centre/settings_optimiser.html
+++ b/download_centre/settings_optimiser.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Software, Script, Debloat, Optimise, disable, telemetry, privacy">
     <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="../stylesheet.css"> <!-- Link to external stylesheet -->
-    <link rel="icon" type="image/x-icon" href="../favicon.png">
+    <link rel="icon" type="image/x-icon" href="../favicon.webp">
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
     <script src="../scripts.js"></script> <!-- Link to external JavaScript file -->
     <title>Settings Optimiser | Hackboto Tech Tips</title>
@@ -40,7 +40,7 @@
     </aside>    
     <article title="Main Article Content"> <!-- Main article content -->
         <h1>Download: Settings Optimiser Scripts</h1>
-            <img src="settings_optimiser/system_settings_optimiser.png" alt="an image representing the Settings Optimiser Script.">
+            <img src="settings_optimiser/system_settings_optimiser.webp" alt="an image representing the Settings Optimiser Script.">
                 <p class="imgdescription">The Hackboto Tech Tips Settings Optimiser Script is really easy to use, just follow the instructions that you are provided with.</p>
             <h2 id="function">What Does the Script Do?</h2>
                 <p>The Hackboto Tech Tips Settings Optimiser script is a free script that changes your Windows 10/ 11 settings, many of the settings changed are not accessible through the standard settings app, this is where the script comes into play as it disables unnecessary telemetry and data collection on your PC, the script will also disable non-essential system services that are made redundant as a result of the changes to your settings.</p>
@@ -50,7 +50,7 @@
                 <a class="linkbutton" title="Download Settings_Optimiser.zip" href="https://github.com/H90HSORH0J30JHDSRH/Windows_Optimisation_Scripts/releases/download/1.2.6/Settings_Optimiser.zip">Download Settings_Optimiser.zip</a>
                 <p><strong>The latest version is 1.2.6</strong></p>
                 <p>The script is in two halves, read the "How do I use the script?" section to learn more.</p>
-                <img src="settings_optimiser/download.png" alt="When you download the folder you should see two files, System__Settings_Optimiser.bat and User_Settings_Optimiser.bat">
+                <img src="settings_optimiser/download.webp" alt="When you download the folder you should see two files, System__Settings_Optimiser.bat and User_Settings_Optimiser.bat">
                     <p>Once you have downloaded the file, you should have a .zip folder, this folder should contain the System__Settings_Optimiser.bat and User_Settings_Optimiser.bat scripts, if you do not see these scripts, it is possible that there is a problem with the download, if this happens try downloading again.</p>
             <h2 id="how-to-use">How do I use the script?</h2> 
                 <p>The script is really simple and easy to use, the script has been split into two files called "System__Settings_Optimiser.bat" and "User_Settings_Optimiser.bat".</p>
@@ -58,15 +58,15 @@
                 <p>User_Settings_Optimiser.bat: This script makes changes to other user accounts on the computer that don't have admin rights, you will need to run this script on each user account that is on your computer system after you have run the System_Settings_Optimiser.bat.</p>
                 <h3>Step 1: Run System__Settings_Optimiser</h3>
                     <p>To Run the System_Settings_Optimiser you need to double click on it from within the folder mentioned in the previous section.</p>
-                    <img src="settings_optimiser/step1.png" alt="Visual representation of error, there are three buttons you need to click on 'Run'.">
+                    <img src="settings_optimiser/step1.webp" alt="Visual representation of error, there are three buttons you need to click on 'Run'.">
                         <p>When running the System_Settings_Optimiser you might see this error, you need to click 'Run' to continue."</p>
-                    <img src="settings_optimiser/clickonmoreinfo.png" alt="Visual representation of the error, you might face an antivirus error, if this happens click on 'More info'.">
+                    <img src="settings_optimiser/clickonmoreinfo.webp" alt="Visual representation of the error, you might face an antivirus error, if this happens click on 'More info'.">
                         <p>Sometimes the script will be blocked by the built-in antivirus, this is because the script was not created on your computer, if you see this error you will need to click on 'More info'.</p>
-                    <img src="settings_optimiser/runanyway.png" alt="Visual representation of error, after clicking on 'More info' click on 'Run anyway'.">
+                    <img src="settings_optimiser/runanyway.webp" alt="Visual representation of error, after clicking on 'More info' click on 'Run anyway'.">
                         <p>After clicking on 'More info' you will need to click on 'Run anyway' to continue.</p>    
-                    <img src="settings_optimiser/UAC.png" alt="Image representing User Account Control.">
+                    <img src="settings_optimiser/UAC.webp" alt="Image representing User Account Control.">
                         <p>You will be asked to enter your Admin password at this stage, once you enter your password click yes. You might not need a password if you are using an Admin account to run the script.</p>
-                    <img src="settings_optimiser/system_settings_optimiser.png" alt="Image representing the settings optimiser">
+                    <img src="settings_optimiser/system_settings_optimiser.webp" alt="Image representing the settings optimiser">
                         <p>By this stage the System_Settings_Optimiser should be running, you will be asked to read through the Terms and Conditions, enter 'Y' if you agree to the Terms and Conditions and would like to start the script, if you do not agree with the Terms and Conditions enter 'N' and the script will close, and no changes will be made to your computer.</p>
                         <p>Once the script has completed you will see a message telling you this, when you click OK, your computer will restart, and you can move onto step 2.</p>
                 <h3>Step 2: Run User__Settings_Optimiser</h3>
