--- a/pc_tips/windows_debloat.html
+++ b/pc_tips/windows_debloat.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Windows, debloat, optimisation, tool, performance, old, computer">
     <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="../stylesheet.css"> <!-- Link to external stylesheet -->
-    <link rel="icon" type="image/x-icon" href="../favicon.png">
+    <link rel="icon" type="image/x-icon" href="../favicon.webp">
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
     <script src="../scripts.js"></script> <!-- Link to external JavaScript file -->
     <title>Debloating Windows | Hackboto Tech Tips</title>
@@ -46,7 +46,7 @@
     </aside>    
     <article title="Main Article Content"> <!-- Main article content -->
         <h1 id="Article-Title">Debloating Windows 11 24H2</h1>
-            <img src="windows_debloat/windows11.png" alt="an image representing an ad free Windows 11 experience.">
+            <img src="windows_debloat/windows11.webp" alt="an image representing an ad free Windows 11 experience.">
                 <p class="imgdescription">Windows 11 is free of adware and spyware if you set it up correctly, read on to learn how you can achieve this.</p>
             <h2 id="Introduction">Introduction</h2>
                 <p>Have you noticed that your computer is full of apps that you don't use? Have you noticed that your computer is constantly telling you to try a new awesome feature or save money by doing X Y or Z? Have you noticed that your computer is getting just slower in general since upgrading to Windows 10/ 11?</p>
@@ -72,21 +72,21 @@
                 <p><strong>I advise that you backup your computer before proceeding, you can learn about backing up your computer and your files in my "Backing Up Windows 10/ 11" guide, link below.</strong></p>
                 <a class="linkbutton" title="Visit Backing Up Windows 10/ 11 guide" href="https://hackbototechtips.github.io/pc_tips/windows_backup.html">View Backing Up Windows 10/ 11 guide</a>
             <h3 id="chris-titus">Chris Titus: Ultimate Windows Utility</h3>
-                <img src="windows_debloat/chris_titus_tool.png" alt="an image representing the Chris Titus: Ultimate Windows Utility">
+                <img src="windows_debloat/chris_titus_tool.webp" alt="an image representing the Chris Titus: Ultimate Windows Utility">
                     <p class="imgdescription">It might look complicated, but it is really simple to use, you simply click on the options you want to enable/ disable and click the run tweaks button at the bottom.</p>
                         <p>This tool is good because you do not need to download any scripts or anything to run it, just need to open the Terminal as an Admin.</p>
                         <p>To open Terminal as an admin: </p>
                             <ol>
-                                <li>Right click on the start button 🪟.</li>
+                                <li>Right click on the start button &#x229e.</li>
                                 <li>Click on "Terminal (Admin)".</li>
                                 <li>In the User Account Control popup, click yes. *You may need to enter your admin account password.</li>
                             </ol>
-                        <img src="windows_debloat/chris_titus_tool_options.png" alt="image showing the customized preferences and the essential tweaks that I advise people to use.">
+                        <img src="windows_debloat/chris_titus_tool_options.webp" alt="image showing the customized preferences and the essential tweaks that I advise people to use.">
                         <p class="imgdescription">These are the options I would advise you use on the Tweaks tab, once you set them to your preference, you need to click the "Run Tweaks" button at the bottom of the page.</p>
                         <p>You can learn more about the Chris Titus: Ultimate Windows Utility by clicking on the link to the official webpage below.</p>
                         <a class="linkbutton" title="Visit Chris Titus Website" href="https://christitus.com/windows-tool/">Visit Chris Titus Webpage</a>
             <h3 id="ShutUp10">O&O Software: O&O ShutUp10++</h3>
-                <img src="windows_debloat/shutup10.png" alt="an image representing the O&O Software: O&O ShutUp10++">
+                <img src="windows_debloat/shutup10.webp" alt="an image representing the O&O Software: O&O ShutUp10++">
                     <p class="imgdescription">O&O ShutUp10 might be quite intimidating at first, however it is really easy to use, you simply click on the options and toggle them on (green) or off (red).</p>
                     <p>There are two tabs on O&O ShutUp10, Current User and Local Machine. Current User means that the settings applied will only apply to the user who is running the tool, if you have more than one profile on your computer yours will be the only one that is impacted. Local Machine is the same as Current User, however it has more options available and will apply to all of the user profiles on your computer.</p>
                     <p>When Using O&O ShutUp10 I recommend that you apply the recommended settings to both Local Machine and Current User, to do this you must: </p>
@@ -102,7 +102,7 @@
                     <p>ShutUp10 is free to download for home usage, however it is proprietary, this means that you must comply with the EULA that is outlined on the O&O Software website, you can find a link below to the O&O Software website.</p>
                     <a class="linkbutton" title="Visit O&O Software Website" href="https://www.oo-software.com/en/shutup10">Visit O&O Software Webpage</a>
             <h3 id="hackboto-settings-script">Hackboto Tech Tips: System_Settings_Optimiser & User_Settings_Optimiser</h3>
-                <img src="windows_debloat/settings_optimise_image.png" alt="an image representing the Hackboto Tech Tips settings optimiser scripts.">
+                <img src="../download_centre/settings_optimiser/system_settings_optimiser.webp" alt="an image representing the Hackboto Tech Tips settings optimiser scripts.">
                     <p class="imgdescription">It might not be the prettiest solution but the Hackboto Tech Tips System_Settings_Optimiser & the User_Settings_Optimiser scripts are really simple to use and require no technical knowledge to operate.</p>
                     <p>The Hackboto Tech Tips System_Settings_Optimiser and User_Settings_Optimiser works by changing registry entries on your computer system, this allows the script to gain access to hidden system settings that control things like the level of telemetry is collected, the content that is delivered to your computer system. The script also works by disabling telemetry and data collection services that are running on your computer.</p>
                     <p>The Hackboto Tech Tips System_Settings_Optimiser and User_Settings_Optimiser are ideal for people who do not have a high level of technical knowledge and want something that is quick and easy to use.</p>
