--- a/download_centre/computer_optimiser.html
+++ b/download_centre/computer_optimiser.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Software, Script, Low, space, Optimise, Corrupt, glitchy, sluggish.">
     <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="../stylesheet.css"> <!-- Link to external stylesheet -->
-    <link rel="icon" type="image/x-icon" href="../favicon.png">
+    <link rel="icon" type="image/x-icon" href="../favicon.webp">
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
     <script src="../scripts.js"></script> <!-- Link to external JavaScript file -->
     <title>Computer Optimiser | Hackboto Tech Tips</title>
@@ -40,7 +40,7 @@
     </aside>    
     <article title="Main Article Content"> <!-- Main article content -->
         <h1>Download: Computer Optimiser Scripts</h1>
-            <img src="computer_optimiser/system_optimiser.png" alt="an image representing the System Optimiser Script.">
+            <img src="computer_optimiser/system_optimiser.webp" alt="an image representing the System Optimiser Script.">
                 <p class="imgdescription">The Hackboto Tech Tips Computer Optimiser Scripts are really easy to use, just follow the instructions that you are provided with.</p>
             <h2 id="function">What Does the Script Do?</h2>
                 <p>The Hackboto Tech Tips Computer Optimiser scripts are free scripts that remove old and unnecessary system files such as error logs, previous updates, etc, as well as old unnecessary files from your user account such as old application logs, and other junk files that will eat up your storage space.</p>
@@ -48,7 +48,7 @@
                 <p>You can download the scripts using the download button below, this should start the download process.</p>
                 <a class="linkbutton" title="Download Computer_Optimiser.zip" href="https://github.com/H90HSORH0J30JHDSRH/hackbototechtipsfiles/releases/download/downloads/Computer_Optimiser.zip">Download Computer_Optimiser.zip</a>
                 <br>
-                <img src="computer_optimiser/folder_download.png" alt="When you download the folder you should see two files, System_Optimiser.bat and User_Optimiser.bat">
+                <img src="computer_optimiser/folder_download.webp" alt="When you download the folder you should see two files, System_Optimiser.bat and User_Optimiser.bat">
                     <p>Once you have downloaded the file, you should have a .zip folder, this folder should contain the System_Optimiser.bat and User_Optimiser.bat scripts, if you do not see these scripts, it is possible that there is a problem with the download, if this happens try downloading again.</p>
             <h2 id="how-to-use">How do I use the scripts?</h2> 
                 <p>The scripts are really simple and easy to use, the script has been split into two files called "System_Optimiser.bat" and "User_Optimiser.bat".</p>
@@ -56,15 +56,15 @@
                 <p>User_Optimiser.bat: This script will only apply changes to your user account; therefore, it does not require admin rights to run, you should run this script after running the "System_Optimiser.bat".</p>
                 <h3>Step 1: Run System_Optimiser.bat</h3>
                     <p>To Run the System_Optimiser you need to double click on it from within the folder mentioned in the previous section.</p>
-                    <img src="settings_optimiser/step1.png" alt="Visual representation of error, there are three buttons you need to click on 'Run'.">
+                    <img src="settings_optimiser/step1.webp" alt="Visual representation of error, there are three buttons you need to click on 'Run'.">
                         <p>When running the System_Optimiser you might see this error, you need to click 'Run' to continue.</p>
-                    <img src="settings_optimiser/clickonmoreinfo.png" alt="Visual representation of error, you might face an antivirus error, if this happens click on 'More info'.">
+                    <img src="settings_optimiser/clickonmoreinfo.webp" alt="Visual representation of error, you might face an antivirus error, if this happens click on 'More info'.">
                         <p>Sometimes the script will be blocked by the built-in antivirus, this is because the script was not created on your computer, if you see this error you will need to click on 'More info'.</p>
-                    <img src="settings_optimiser/runanyway.png" alt="Visual representation of error, after clicking on 'More info' click on 'Run anyway'.">
+                    <img src="settings_optimiser/runanyway.webp" alt="Visual representation of error, after clicking on 'More info' click on 'Run anyway'.">
                         <p>After clicking on 'More info' you will need to click on 'Run anyway' to continue.</p>    
-                    <img src="settings_optimiser/UAC.png" alt="Image representing User Account Control.">
+                    <img src="settings_optimiser/UAC.webp" alt="Image representing User Account Control.">
                         <p>You will be asked to enter your Admin password at this stage, once you enter your password click yes. You might not need a password if you are using an Admin account to run the script.</p>
-                    <img src="computer_optimiser/system_optimiser.png" alt="Image representing the system optimiser">
+                    <img src="computer_optimiser/system_optimiser.webp" alt="Image representing the system optimiser">
                         <p>By this stage the System_Optimiser should be running, you will be asked to read through the Terms and Conditions, enter 'Y' if you agree to the Terms and Conditions and would like to start the script, if you do not agree with the Terms and Conditions enter 'N' and the script will close, and no changes will be made to your computer.</p>
                         <p>Once the script has completed you will see a message telling you this, when you click OK, your computer will restart, and you can move onto step 2.</p>
                 <h3>Step 2: Run User_Optimiser.bat</h3>
