--- a/pc_tips/windows_optimise.html
+++ b/pc_tips/windows_optimise.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Windows, declutter, optimisation, tool, performance, old, computer">
     <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="../stylesheet.css"> <!-- Link to external stylesheet -->
-    <link rel="icon" type="image/x-icon" href="../favicon.png">
+    <link rel="icon" type="image/x-icon" href="../favicon.webp">
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
     <script src="../scripts.js"></script> <!-- Link to external JavaScript file -->
     <title>Optimising Windows | Hackboto Tech Tips</title>
@@ -44,7 +44,7 @@
     </aside>    
     <article title="Main Article Content"> <!-- Main article content -->
         <h1 id="Article-Title">Optimising Windows 10/ 11 Guide</h1>
-            <img src="windows_optimise/windows_errors.png" alt="an image representing many errors on Windows 11.">
+            <img src="windows_optimise/windows_errors.webp" alt="an image representing many errors on Windows 11.">
                 <p class="imgdescription">Has your computer gotten slower and more unstable? Errors should appear once in a blue moon and not every day.</p>
             <h2 id="Introduction">Introduction</h2>
                 <p>Have you noticed that your computer has started to get slower and more unstable, you might be thinking that you are getting ready for a new one if this is the case, however this perceived slowness and glitchy behaviour is likely to be caused by system corruption and old temporary files that are cluttering up your computer system.</p>
@@ -61,20 +61,20 @@
                 <a class="linkbutton" title="Visit Backing Up Windows 10/ 11 guide" href="https://hackbototechtips.github.io/pc_tips/windows_backup.html">View Backing Up Windows 10/ 11 guide</a>
             <h3 id="clearing-browser-cache">How do I clear my Browser Cache?</h3>
                 <p>Clearing your browser cache is really easy, it might be slightly different depending on the browser you use, this guide will walk you through Microsoft Edge, however Google Crome is very similar as they are built on the same technology.</p>
-                <img src="windows_optimise/browser_step_1.png" alt="an image representing Microsoft Edge, hovering over three dots in the toolbar.">
+                <img src="windows_optimise/browser_step_1.webp" alt="an image representing Microsoft Edge, hovering over three dots in the toolbar.">
                 <p>The first step is to open your web browser, you will see three dots in your tool bar, you need to click on these.</p>
-                <img src="windows_optimise/browser_step_2.png" alt="an image representing Microsoft Edge, highlighted settings button.">
+                <img src="windows_optimise/browser_step_2.webp" alt="an image representing Microsoft Edge, highlighted settings button.">
                 <p>The next thing you need to click on is the settings button at the bottom, you might need to scroll down for this to be visible.</p>
-                <img src="windows_optimise/browser_step_3.png" alt="an image representing Microsoft Edge, highlighted Privacy, search, and services button.">
+                <img src="windows_optimise/browser_step_3.webp" alt="an image representing Microsoft Edge, highlighted Privacy, search, and services button.">
                 <p>You should now see a screen that looks something like this, on Microsoft Edge you need to click on Privacy, search, and services, this might be called something else if you are using a different browser, for example on Firefox it is called Privacy & Security.</p>
-                <img src="windows_optimise/browser_step_4.png" alt="an image representing Microsoft Edge, Clear browsing data is highlighted, the Choose what to clear button is also highlighted">
+                <img src="windows_optimise/browser_step_4.webp" alt="an image representing Microsoft Edge, Clear browsing data is highlighted, the Choose what to clear button is also highlighted">
                 <p>You now need to scroll down until you see the Clear browsing data section, you then need to click on Choose what to clear.</p>
-                <img src="windows_optimise/browser_step_5.png" alt="an image representing Microsoft Edge, Clear browsing data popup, Time range is set to all time, Browsing history is selected, Download history is selected, Cookies and other site data is selected, Cached images and files is selected.">
+                <img src="windows_optimise/browser_step_5.webp" alt="an image representing Microsoft Edge, Clear browsing data popup, Time range is set to all time, Browsing history is selected, Download history is selected, Cookies and other site data is selected, Cached images and files is selected.">
                 <p>You are now at the bit where you delete your browser history and browser cache, make sure you select "All time" for the time range, also make sure that passwords are deselected as this would delete all your saved passwords if you select this. I recommend selecting the options as they are in the image above as this will be the most effective way of clearing the junk from your browser.</p>
                 <p><strong>Please take notice that this will delete all of your browser history, sign you out from websites, etc, your settings will remain as this is only clearing the browsing data.</strong></p>
                 <p>You will now find that your computer feels a bit snappier when you are browsing the internet.</p>
             <h3 id="hackboto-optimiser">Hackboto Tech Tips: Computer Optimiser</h3>
-                <img src="windows_optimise/system_optimiser.png" alt="an image representing the Hackboto Tech Tips settings optimiser scripts.">
+                <img src="windows_optimise/system_optimiser.webp" alt="an image representing the Hackboto Tech Tips settings optimiser scripts.">
                     <p class="imgdescription">It might not be the prettiest solution but the Hackboto Tech Tips Computer Optimiser checks for system level corruption and repairs it, and it removes junk from your computer.</p>
                     <p>The Hackboto Tech Tips System_Optimiser and User_Optimiser are ideal for people who do not have a high level of technical knowledge and want to improve the stability and performance of their computer system at the touch of a button.</p>
                     <p>You can learn more about the Hackboto Tech Tips System_Optimiser & User_Optimiser by clicking on the link below.</p>
@@ -82,34 +82,32 @@
                     <p><strong>Before you run any scripts on your computer system, I would advise you to back up your system first so that you can restore it back to its previous state in the event that anything goes wrong.</strong></p>
                     <a class="linkbutton" title="Visit Backing Up Windows 10/ 11 guide" href="https://hackbototechtips.github.io/pc_tips/windows_backup.html">View Backing Up Windows 10/ 11 guide</a>
             <h3 id="defrag">How to defragment your Hard Disk Drive.</h3>
-                <img src="windows_optimise/windows_defragment.png" alt="an image representing the Windows 11 system drive defragment utility">
+                <img src="windows_optimise/windows_defragment.webp" alt="an image representing the Windows 11 system drive defragment utility">
                 <p>If you have an older PC that originally came with Windows 10 or older, you might have a mechanical boot drive, this means that your PC might slow down after a while if it is not defragmented, if you have an HDD boot drive you will see a huge improvement in performance after defragmenting your drive.</p>
-                <img src="windows_optimise/windows_11_defrag_search.png" alt="an image representing the Windows 11 search menu, Defragment and Optimise Drives is displayed.">
+                <img src="windows_optimise/windows_11_defrag_search.webp" alt="an image representing the Windows 11 search menu, Defragment and Optimise Drives is displayed.">
                 <p>In Windows Vista, Windows 7, Windows 8, Windows 10, and Windows 11 to launch the defragment utility you just need to launch your start menu and type "defragment" and you will see the utility as pictured.</p>
-                <img src="windows_optimise/windows_8_search.png" alt="an image representing the Windows 8 search screen, Defragment and Optimise Drives is displayed.">
-                <p>In Windows 8 and Windows 8.1 it looks slightly different as the icon is different.</p>
-                <img src="windows_optimise/windows_defragment.png" alt="an image representing the Windows 11 system drive defragment utility">
+                <img src="windows_optimise/windows_defragment.webp" alt="an image representing the Windows 11 system drive defragment utility">
                 <p>You should now see a screen that looks like this one, what you need to do is make sure that advanced view is ticked, click on the top drive, then click the button where it says Defragment or Optimise, you will need to repeat this process for all of the Drives that you see working you way from the top to the bottom.</p>
                 <p>You just need to wait for the Current status to change to OK on all the drives, then you can close the utility and you have successfully defragmented/ optimised your storage drives.</p>
-                <img src="windows_optimise/hard_drive.png" alt="an image representing the Windows 8 system drive defragment utility, hard disk drive media type.">
-                <p>If your media type is reported as a Hard Disk Drive (HDD), you might want to consider upgrading to a Solid-State Drive (SSD) as these are much (faster, cheaper, durable) better than HDDs, you buy them for as little as £20 pound and they will make your computer run faster than when it was new!</p>
+                <img src="windows_optimise/hard_drive.webp" alt="an image representing the Windows 8 system drive defragment utility, hard disk drive media type.">
+                <p>If your media type is reported as a Hard Disk Drive (HDD), you might want to consider upgrading to a Solid-State Drive (SSD) as these are much (faster, cheaper, durable) better than HDDs, you can buy them for as little as £20 pound and they will make your computer run faster than when it was new!</p>
             <h3 id="reinstall-windows">How to Reinstall Windows 10/ 11</h3>
-                <img src="windows_optimise/resetting_this_pc.png" alt="an image showing the Windows 11 Reset This PC screen, resetting this pc is at 27%">
+                <img src="windows_optimise/resetting_this_pc.webp" alt="an image showing the Windows 11 Reset This PC screen, resetting this pc is at 27%">
                         <p><strong>Warning: You must backup your PC before you attempt reinstalling Windows 10 /11 as there is a high possibility that this might fail and you might lose your data.</strong></p>
                         <p>Reinstalling Windows should always be a last resort, if your PC is still really slow and glitchy after trying everything else on this page.</p>
                         <p>You can reinstall Windows 10 and later using the settings App, you just need to navigate to the Recovery settings page, alternatively you can use the link below.</p>
                         <a class="linkbutton" title="Launch Settings: Recovery." href="ms-settings:recovery">Open Windows Recovery</a>
                         <br>
-                        <img src="windows_optimise/reset_reset_pc.png" alt="an image showing the Windows 11 recovery page, Reset PC button is highlighted">
+                        <img src="windows_optimise/reset_reset_pc.webp" alt="an image showing the Windows 11 recovery page, Reset PC button is highlighted">
                         <p>After you have navigated to the Recovery Settings page, you need to click on the Reset PC button, you can use 'Reinstall Now' instead if you want to try and keep your apps, this will essentially start a giant Windows Update for your entire operating system.</p>
-                        <img src="windows_optimise/keep_my_files.png" alt="keep my files button is highlighted on choose an option popup.">
+                        <img src="windows_optimise/keep_my_files.webp" alt="keep my files button is highlighted on choose an option popup.">
                         <p>You want to click the Keep my files button, this will aim to keep all your files but it will reset all of your settings and it will remove all of your apps.</p>
                         <p><strong>There is no guarantee that this will work, you might lose your files in the process, I advise you to back up your PC before you proceed.</strong></p>
-                        <img src="windows_optimise/reset_pc_button.png" alt="Rest button is highlighted on reset this PC popup.">
+                        <img src="windows_optimise/reset_pc_button.webp" alt="Rest button is highlighted on reset this PC popup.">
                         <p>Make sure that you agree to the following listed on your screen, once you are sure that you have made a backup of your computer and your files, you can click on the Reset button, this will then start the reset process.</p>
                         <p><strong>This process will take a while depending on the age of your computer system, it should not take any longer than 12 hours, if the process takes more than 12 hours you will need to contact Microsoft Support for help, or you will need to roll your PC back to the backup you made before starting.</strong></p>
         <hr>
-        <p>Page Updated: 08/06/2024</p>
+        <p>Page Updated: 11/10/2024</p>
         <p>Page Author: Hackboto</p>
     </article>
     <footer class="asidefooter" title="Website Footer"> <!-- Footer section -->
