--- a/download_centre/computer_optimiser.html
+++ b/download_centre/computer_optimiser.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Software, Script, Low, space, Optimise, Corrupt, glitchy, sluggish.">
     <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="../stylesheet.css"> <!-- Link to external stylesheet -->
-    <link rel="icon" type="image/x-icon" href="../favicon.webp">
+    <link rel="icon" type="image/x-icon" href="../favicon.png">
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
     <script src="../scripts.js"></script> <!-- Link to external JavaScript file -->
     <title>Computer Optimiser | Hackboto Tech Tips</title>
