--- a/pc_tips/adblocker.html
+++ b/pc_tips/adblocker.html
@@ -76,6 +76,8 @@
                     <p>Click on the "Add extension" button to install uBlock Origin, once you have done this you should see a message telling you that uBlock Origin has been successfully installed.</p>
                 <h3 id="CHROME">Installing uBlock Origin on Google Chrome</h3>
                     <img src="adblocker/chrome_get.webp" alt="Add uBlock Origin to Chrome">
+                    <p><strong>UPDATE: As of 17/10/2024 Google Chrome prevents the use of adblockers, therefore I advise that you switch to Mozilla Firefox as an alternative.</strong></p>
+                    <a class="linkbutton" title="Visit Firefox Download Page" href="https://www.mozilla.org/en-GB/firefox/new/">Download: Mozilla Firefox</a>
                     <p>To install uBlock Origin on Google Chrome you need to visit the uBlock Origin page in the chrome web store and click on the "Add to Chrome" button.</p>
                     <a class="linkbutton" title="chrome web store: uBlock Origin" href="https://chromewebstore.google.com/detail/cjpalhdlnbpafiamejdnhcphjbkeiagm">chrome web store: uBlock Origin</a>
                     <br>
@@ -88,7 +90,7 @@
                 <p>If you want to allow ads on a particular website for any reason, you just need to click on the uBlock Origin extension, you then need to click on the giant power button, this will whitelist the entire website, to view the ads simply refresh the page.</p>
                 <p>If you want to block the ads after whitelisting the website you just need to navigate to that website again and click the power button, it will then turn blue and the ads will be blocked again.</p>
             <hr>
-        <p>Page Updated: 16/06/2024</p>
+        <p>Page Updated: 17/10/2024</p>
         <p>Page Author: Hackboto</p>
     </article>
     <footer class="asidefooter" title="Website Footer"> <!-- Footer section -->
