Update pages content

--- a/pc_tips.html
+++ b/pc_tips.html
@@ -42,9 +42,9 @@
         <h2>Guides</h2> <!-- Section heading -->
         <div class="articlerow"> <!-- Article row -->
             <div class="articlecolumn" style="background-image: url(pc_tips/card_images/upgradefrom10to11.webp);" title="Upgrading To Windows 11"> <!-- Article column -->
-                <h3>Upgrade to Windows 11</h3> <!-- Article title -->
+                <h3>Upgrade to Windows 11 24H2</h3> <!-- Article title -->
                 <hr>
-                <p>Did you know that Windows 10 is EOL in 2025, if you do not upgrade to Windows 11 by then you will no longer receive security updates, this guide will explain what you need know and what you need to do to upgrade to Windows 11.</p> <!-- Article excerpt -->
+                <p>Did you know that Windows 10 is EOL on 14/10/2025? You need to upgrade to Windows 11 continue receiving security updates, this guide will explain what you need know and what you need to do to upgrade to Windows 11.</p> <!-- Article excerpt -->
                 <br>
                 <a href="pc_tips/upgrading_to_windows11.html" title="Read More about upgrading to Windows 11">View Guide</a> <!-- Link to full article -->
             </div>
