--- a/pc_tips/upgrading_to_windows11.html
+++ b/pc_tips/upgrading_to_windows11.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/x-icon" href="../favicon.png">
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
     <script src="../scripts.js"></script> <!-- Link to external JavaScript file -->
-    <title>Upgrading to Windows 11 | Hackboto Tech Tips</title>
+    <title>Upgrading to Windows 11 24H2 | Hackboto Tech Tips</title>
 </head>
 <body>
     <div class="sticky">
@@ -44,12 +44,13 @@
         </ul>        
     </aside>    
     <article title="Main Article Content"> <!-- Main article content -->
-        <h1 id="top-of-page">Upgrading to Windows 11</h1>
+        <h1 id="top-of-page">Upgrading to Windows 11 24H2</h1>
             <img src="upgrading_to_windows11/upgradefrom10to11.webp" alt="Transitioning from Windows 10 to Windows 11">
                 <p class="imgdescription">The time to transition from Windows 10 to Windows 11 is here.</p>
             <h2 id="Introduction">Introduction</h2>
-                <p>Windows 11 was released on 05/10/2021, making it three years old this year, if you are running Windows 10 or older you need to upgrade to ensure that your PC remains updated and compatible with the latest software.</p>
-                <p>Windows 10 will stop receiving security updates in 2025, this means that you have just under a year to upgrade or risk becoming vulnerable to cyber-attacks.</p>
+                <p>Windows 11 was released in 2021, making it four years old this year, if you are running Windows 10 or older you need to upgrade to ensure that your PC remains updated and compatible with the latest software.</p>
+                <p>Windows 10 will stop receiving security updates in October this year, this means that you have only a few months to upgrade or risk becoming vulnerable to cyber-attacks.</p>
+                <p>Windows 11 21H2 and 22H2 are also EOL as is Windows 10 21H2 and older, you can follow this guide regardless of the version of Windows 10 or 11 that you are running, the latest version as of 01/01/2025 is Windows 11 24H2.</p>
                 <p>Currently you can upgrade from Windows 10 to Windows 11 for free, the upgrade process is really simple and straight forward provided that you have a supported PC, if your PC is not supported you can still upgrade but it will be a bit more complicated.</p>
                 <p><strong>I advise that you backup your computer before proceeding, you can learn about backing up your computer and your files in my "Backing Up Windows 10/ 11" guide, link below.</strong></p>
                 <a class="linkbutton" title="Visit Backing Up Windows 10/ 11 guide" href="https://hackbototechtips.github.io/pc_tips/windows_backup.html">View Backing Up Windows 10/ 11 guide</a>
@@ -116,12 +117,12 @@
             <p>Debloating your computer system is a really straight forward process, you can learn about the benefits of debloating your computer system, and how you can do it by visiting my guide which is linked below.</p>
             <a class="linkbutton" href="https://hackbototechtips.github.io/pc_tips/windows_debloat.html" title="Visit my guide on debloating Windows 11 24H2">Guide on Debloating Windows 11 24H2</a>
             <hr>
-        <p>Page Updated: 22/09/2024</p>
+        <p>Page Updated: 01/01/2025</p>
         <p>Page Author: Hackboto</p>
     </article>
     <footer class="asidefooter" title="Website Footer"> <!-- Footer section -->
         <div class="footertext">
-            <p>©2024 Hackboto Tech Tips All rights reserved.</p> <!-- Copyright notice -->
+            <p>©2025 Hackboto Tech Tips All rights reserved.</p> <!-- Copyright notice -->
         </div>
         <div class="footerbuttons">
             <a href="../map.html" title="Go to Sitemap">Sitemap</a> <!-- Link to sitemap -->
