--- a/legal.html
+++ b/legal.html
@@ -107,7 +107,7 @@
     </article>
     <footer class="asidefooter" title="Website Footer"> <!-- Footer section -->
         <div class="footertext">
-            <p>©2024 Hackboto Tech Tips All rights reserved.</p> <!-- Copyright notice -->
+            <p>©2025 Hackboto Tech Tips All Rights Reserved</p> <!-- Copyright notice -->
         </div>
         <div class="footerbuttons">
             <a href="map.html" title="Go to Sitemap">Sitemap</a> <!-- Link to sitemap -->
