--- a/map.html
+++ b/map.html
@@ -37,13 +37,13 @@
     </div>
     <br>
     <section class="sitemap" title="Website Sitemap"> <!-- Sitemap section -->
-        <div title="Top Level Pages"> <!-- Level 1 -->
+        <div> <!-- Level 1 -->
             <h2><a href="index.html" title="Go to Homepage">Hackboto Tech Tips Homepage</a></h1> <!-- Level 2 heading -->
             <ul> <!-- Unordered list -->
             </ul>
         </div>
-        <div title="Level 2 pages"> <!-- Level 2 -->
-            <h2 class="l2"><a href="pc_tips.html" title="Explore tips and tricks for your PC">PC Guides</a></h2> <!-- Level 2 heading -->
+        <div> <!-- Level 2 -->
+            <h2><a href="pc_tips.html" title="Explore tips and tricks for your PC">PC Guides</a></h2> <!-- Level 2 heading -->
             <ul> <!-- Unordered list -->
                 <li><h3><a href="pc_tips/upgrading_to_windows11.html" title="Learn how and why you should upgrade to Windows 11">Upgrade to Windows 11 24H2</a></h3></li>
                 <li><h3><a href="pc_tips/windows_optimise.html" title="Learn how you can optimise your Windows PC">Optimising Windows 10/ 11</a></h3></li>
@@ -53,11 +53,11 @@
                 <li><h3><a href="pc_tips/adblocker.html" title="Learn about blocking ads on your PC.">Blocking ads on your PC</a></h3></li>
                 <li><h3><a href="pc_tips/check_wddm_version.html" title="Learn about checking your WDDM driver version">Finding your WDDM version</a></h3></li>
             </ul>
-            <h2 class="l2"><a href="mobile_tips.html" title="Explore tips and tricks for your mobile device">Mobile Guides</a></h2> <!-- Level 2 heading -->
+            <h2><a href="mobile_tips.html" title="Explore tips and tricks for your mobile device">Mobile Guides</a></h2> <!-- Level 2 heading -->
             <ul>
                 <li><h3><a href="mobile_tips/dns_adblocker.html" title="Learn how you can block ads on your mobile using DNS">Blocking ads on your mobile</a></h3></li>
             </ul>
-            <h2 class="l2"><a href="download_centre.html" title="Go to File Downloads">Download Centre</a></h2>
+            <h2><a href="download_centre.html" title="Go to File Downloads">Download Centre</a></h2>
                 <ul><!-- Unordered list -->
                     <li><h3><a href="download_centre/settings_optimiser.html" title="Go to Settings Optimiser download page">Settings Optimiser</a></h3></li>
                     <li><h3><a href="download_centre/multi-pane_overlay_disable_reg.html" title="Go to Multi-Plane Overlay fix download page">MPO Fix .reg</a></h3></li>
@@ -65,13 +65,13 @@
                     <li><h3><a href="download_centre/win11_requirement_bypass_tool.html" title="Go to Windows 11 Requirement Bypass Tool download page">Windows 11 Requirement Bypass Tool</a></h3></li>
                     <li><h3><a href="download_centre/computer_optimiser.html" title="Go to Computer Optimiser download page">Computer Optimiser</a></h3></li>
                 </ul>
-            <h2 class="l2"><a href="contact.html" title="Visit Contact page">Contact</a></h2> <!-- Level 2 heading -->
-            <h2 class="l2"><a href="legal.html" title="Go to Legal">Legal</a></h2> <!-- Level 2 heading -->
+            <h2><a href="contact.html" title="Visit Contact page">Contact</a></h2> <!-- Level 2 heading -->
+            <h2><a href="legal.html" title="Go to Legal">Legal</a></h2> <!-- Level 2 heading -->
         </div>
     </section>
     <footer title="Website Footer"> <!-- Footer section -->
         <div class="footertext">
-            <p>©2024 Hackboto Tech Tips All rights reserved.</p> <!-- Copyright notice -->
+            <p>©2025 Hackboto Tech Tips All Rights Reserved</p> <!-- Copyright notice -->
         </div>
         <div class="footerbuttons">
             <a href="map.html" title="Go to Sitemap">Sitemap</a> <!-- Link to sitemap -->
