--- a/pc_tips.html
+++ b/pc_tips.html
@@ -45,7 +45,6 @@
                 <h3>Upgrade to Windows 11 24H2</h3> <!-- Article title -->
                 <hr>
                 <p>Did you know that Windows 10 is EOL on 14/10/2025? You need to upgrade to Windows 11 continue receiving security updates, this guide will explain what you need know and what you need to do to upgrade to Windows 11.</p> <!-- Article excerpt -->
-                <br>
                 <a href="pc_tips/upgrading_to_windows11.html" title="Read More about upgrading to Windows 11">View Guide</a> <!-- Link to full article -->
             </div>
             <div class="articlecolumn" style="background-image: url(pc_tips/card_images/windows_errors.webp);" title="Optimising Windows 10/ 11"> <!-- Article column -->
@@ -88,7 +87,7 @@
     </section>
     <footer title="Website Footer"> <!-- Footer section -->
         <div class="footertext">
-            <p>©2024 Hackboto Tech Tips All rights reserved.</p> <!-- Copyright notice -->
+            <p>©2025 Hackboto Tech Tips All Rights Reserved</p> <!-- Copyright notice -->
         </div>
         <div class="footerbuttons">
             <a href="map.html" title="Go to Sitemap">Sitemap</a> <!-- Link to sitemap -->
