--- a/mobile_tips/dns_adblocker.html
+++ b/mobile_tips/dns_adblocker.html
@@ -141,6 +141,15 @@
                 <img src="dns_adblocker/ios_system_settings_install_profile_warning.webp" alt="iPhone system settings, Install Profile warning popup, Install is circled.">
                 <p>You might see this warning, this is because NextDNS will be able to filter and monitor your internet activities, you need to click "Install" to continue.</p>
                 <p>You have now successfully installed the NextDNS configuration profile on your iOS/ iPadOS device, to remove NextDNS from your device you need to remove the NextDNS configuration profile from your device.</p>
+                <p><strong>Notice: If you are still seeing Ads in Safari you need to disable the "Hide IP Address From Trackers" in the "Privacy and Security" section in the Safari app settings page.</strong></p>
+                <p>To disable the "Hide IP Address From Trackers" in Safari you need to do the following:</p>
+                        <ol>
+                            <li>Open the "Settings" app.</li>
+                            <li>Scroll down to the bottom of the screen and click on "Apps".</li>
+                            <li>Search for "Safari" or scroll down until you see "Safari" and then click on it.</li>
+                            <li>Scroll down until you see the "PRIVACY & SECURITY" section and then click on "Hide IP Address".</li>
+                            <li>Click the button that reads "Off", this will turn off the feature causing issues with the DNS content blocker.</li>
+                        </ol>
             <h2 id="unblocking-domains">Whitelisting domains and fixing errors</h2> 
                 <img src="dns_adblocker/dns_error.webp" alt="DNS resolve error IP address could not be found.">
                 <p>You might find that some webpages are no longer working once you have installed and activated the NextDNS service on your device, you might see errors such as the one displayed above, to resolve this issue you will need to whitelist the domain so that it is not incorrectly blocked.</p>
@@ -148,7 +157,7 @@
                 <p>To allow a particular domain you need to open the whitelist/ allowlist page in your NextDNS portal, you then need to enter the domain into the "Add a domain" text box.</p>
                 <p>You can find the domain you need to whitelist in the URL bar, for example the URL of this webpage is "https://<strong>hackbototechtips.github.io</strong>/mobile_tips/dns_adblocker.html", meaning that the domain you would need to unblock would be "hackbototechtips.github.io"</p>
             <hr>
-        <p>Page Updated: 14/10/2024</p>
+        <p>Page Updated: 03/02/2025</p>
         <p>Page Author: Hackboto</p>
     </article>
     <footer class="asidefooter" title="Website Footer"> <!-- Footer section -->
