--- a/download_centre.html
+++ b/download_centre.html
@@ -45,8 +45,14 @@
             <div class="articlecolumn" title="Settings Optimiser"> <!-- Article column -->
                 <h3>Settings Optimiser Scripts</h3> <!-- Article title -->
                 <hr>
-                <p>The Hackboto Tech Tips Settings Optimiser will optimise the settings on your Windows 10/ 11 based PC so that your personal data is more secure, you have less bloatware and advertisements, and general settings changes to ensure that your PC runs as efficiently as possible.</p> <!-- Article excerpt -->
+                <p>The Hackboto Tech Tips Settings Optimiser will optimise the settings on your Windows 10/ 11 based PC so that your personal data is more secure, you have less bloatware, advertisements, AI, etc to ensure that your PC runs as efficiently as possible.</p> <!-- Article excerpt -->
                 <a href="download_centre/settings_optimiser.html" title="Visit Settings Optimiser">Download Page</a> <!-- Link to full article -->
+            </div>
+            <div class="articlecolumn" title="Windows Optimiser"> <!-- Article column -->
+                <h3>Windows Optimiser</h3> <!-- Article title -->
+                <hr>
+                <p>Download the Hackboto Tech Tips Windows Optimiser, improve the performance of your Windows 10/ 11 PC by removing old files, system level corruption, and old error logs.</p> <!-- Article excerpt -->
+                <a href="download_centre/windows_optimiser.html" title="Visit the Windows Optimiser download page">Download Page</a> <!-- Link to full article -->
             </div>
             <div class="articlecolumn" title="MPO Fix"> <!-- Article column -->
                 <h3>MPO Fix .reg</h3> <!-- Article title -->
@@ -65,12 +71,6 @@
                 <hr>
                 <p>Download the Hackboto Tech Tips Windows 11 Requirement Bypass Tool to upgrade your "unsupported" computer to the latest version of Windows 11 from the click of a button.</p> <!-- Article excerpt -->
                 <a href="download_centre/win11_requirement_bypass_tool.html" title="Visit Windows 11 Requirement Bypass Tool download page">Download Page</a> <!-- Link to full article -->
-            </div>
-            <div class="articlecolumn" title="Computer Optimiser"> <!-- Article column -->
-                <h3>Computer Optimiser Scripts</h3> <!-- Article title -->
-                <hr>
-                <p>Download the Hackboto Tech Tips Computer Optimise Scripts, improve the performance of you Windows 10/ 11 PC by removing old files and system level corruption.</p> <!-- Article excerpt -->
-                <a href="download_centre/computer_optimiser.html" title="Visit Computer Optimiser download page">Download Page</a> <!-- Link to full article -->
             </div>
         </div>
     </section>
