--- a/download_centre/computer_optimiser.html
+++ b/download_centre/computer_optimiser.html
@@ -41,7 +41,7 @@
         </ul>        
     </aside>    
     <article title="Main Article Content"> <!-- Main article content -->
-        <h1 id="top-of-page">Download: Computer Optimiser Scripts</h1>
+        <h1 id="top-of-page">Download: Computer Optimiser Scripts (Deprecated)</h1>
             <img src="computer_optimiser/system_optimiser.webp" alt="an image representing the System Optimiser Script.">
                 <p class="imgdescription">The Hackboto Tech Tips Computer Optimiser Scripts are really easy to use, just follow the instructions that you are provided with.</p>
             <h2 id="function">What Does the Script Do?</h2>
@@ -49,6 +49,8 @@
             <h2 id="download">Downloading the scripts</h2>
                 <p>You can download the scripts using the download button below, this should start the download process.</p>
                 <a class="linkbutton" title="Download Computer_Optimiser.zip" href="https://github.com/H90HSORH0J30JHDSRH/hackbototechtipsfiles/releases/download/downloads/Computer_Optimiser.zip">Download Computer_Optimiser.zip</a>
+                <p><strong>These scripts have been deprecated and are no longer updated, please use the Windows Optimiser program as an alternative.</strong></p>
+                <a class="linkbutton" title="View Download Page for Windows Optimiser" href="https://hackbototechtips.github.io/download_centre/windows_optimiser.html">Learn about: Windows Optimiser</a>
                 <br>
                 <img src="computer_optimiser/folder_download.webp" alt="When you download the folder you should see two files, System_Optimiser.bat and User_Optimiser.bat">
                     <p>Once you have downloaded the file, you should have a .zip folder, this folder should contain the System_Optimiser.bat and User_Optimiser.bat scripts, if you do not see these scripts, it is possible that there is a problem with the download, if this happens try downloading again.</p>
@@ -73,7 +75,7 @@
                     <p>This script does not require admin rights; therefore, you can run it on both standard and admin accounts. If you have many user accounts on your computer, you will need to run the script on each account.</p>
                     <p>To run the script, you need to repeat the steps in step 1, however you need to run the User_Optimiser.bat instead of the System_Optimiser.bat.</p>
         <hr> 
-        <p>Page Updated: 08/06/2024</p>
+        <p>Page Updated: 28/02/2025</p>
         <p>Page Author: Hackboto</p>
     </article>
     <footer class="asidefooter" title="Website Footer"> <!-- Footer section -->
