--- a/pc_tips/windows_optimise.html
+++ b/pc_tips/windows_optimise.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Has your old Windows PC gotten slow and frustrating to use? If it has, learn about the Hackboto Tech Tips system optimiser.">
+    <meta name="description" content="Has your old Windows PC gotten slow and frustrating to use? If it has, learn about the Hackboto Tech Tips Windows Optimiser.">
     <meta name="keywords" content="Windows, declutter, optimisation, tool, performance, old, computer">
     <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="../stylesheet.css"> <!-- Link to external stylesheet -->
@@ -38,7 +38,7 @@
             <li><a href="#Introduction" title="Introduction">Introduction</a></li>
             <li class="Subheading"><a href="#removing-junk-corruption" title="Jump to removing junk and corruption">Removing junk and corruption</a></li>
             <li class="Subheading"><a href="#clearing-browser-cache" title="Jump to clearing browser cache">Clearing browser cache</a></li>
-            <li class="Subheading"><a href="#hackboto-optimiser" title="Hackboto Tech Tips: Computer Optimiser">Hackboto Tech Tips: Computer Optimiser</a></li>
+            <li class="Subheading"><a href="#hackboto-optimiser" title="Hackboto Tech Tips: Windows Optimiser">Hackboto Tech Tips: Windows Optimiser</a></li>
             <li class="Subheading"><a href="#defrag" title="Jump to Defragmenting your Hard Drive">Defragmenting your HDD</a></li>
             <li class="Subheading"><a href="#reinstall-windows" title="Jump to Reinstalling Windows">Reinstalling Windows</a></li>
         </ul>        
@@ -54,7 +54,7 @@
                 <p>Over time your computer will culminate junk and corrupt files, this is normal and is why computers slow down over time, there are three things that you can do to fix this:</p>
                 <ol>
                     <li>Clear your browser history and browser cache.</li>
-                    <li>Run the Hackboto Tech Tips Computer Optimiser.</li>
+                    <li>Run the Hackboto Tech Tips Windows Optimiser.</li>
                     <li>Defrag your Hard Drive</li>
                     <li>Reinstall Windows 10 /11.</li>
                 </ol>
@@ -74,12 +74,12 @@
                 <p>You are now at the bit where you delete your browser history and browser cache, make sure you select "All time" for the time range, also make sure that passwords are deselected as this would delete all your saved passwords if you select this. I recommend selecting the options as they are in the image above as this will be the most effective way of clearing the junk from your browser.</p>
                 <p><strong>Please take notice that this will delete all of your browser history, sign you out from websites, etc, your settings will remain as this is only clearing the browsing data.</strong></p>
                 <p>You will now find that your computer feels a bit snappier when you are browsing the internet.</p>
-            <h3 id="hackboto-optimiser">Hackboto Tech Tips: Computer Optimiser</h3>
-                <img src="windows_optimise/system_optimiser.webp" alt="an image representing the Hackboto Tech Tips settings optimiser scripts.">
-                    <p class="imgdescription">It might not be the prettiest solution but the Hackboto Tech Tips Computer Optimiser checks for system level corruption and repairs it, and it removes junk from your computer.</p>
-                    <p>The Hackboto Tech Tips System_Optimiser and User_Optimiser are ideal for people who do not have a high level of technical knowledge and want to improve the stability and performance of their computer system at the touch of a button.</p>
-                    <p>You can learn more about the Hackboto Tech Tips System_Optimiser & User_Optimiser by clicking on the link below.</p>
-                    <a class="linkbutton" title="Visit Computer Optimiser Download Page" href="https://hackbototechtips.github.io/download_centre/computer_optimiser.html">Visit Computer Optimiser download page</a>
+            <h3 id="hackboto-optimiser">Hackboto Tech Tips: Windows Optimiser</h3>
+                <img src="windows_optimise/windows_optimiser.webp" alt="an image representing the Hackboto Tech Tips Windows Optimiser program.">
+                    <p>The Hackboto Tech Tips Windows Optimiser program has been specially designed to help restore and improve the stability of your Windows 10/ 11 based computer, it checks for system level corruption and repairs it, and it removes junk from your computer and user account.</p>
+                    <p>Our Windows Optimiser tool is designed for those who do not have a high level of technical knowledge and want to improve the stability and performance of their computer system at a touch of a button.</p>
+                    <p>You can learn more about the Hackboto Tech Tips Windows Optimiser program clicking on the link below.</p>
+                    <a class="linkbutton" title="Visit Windows Optimiser Download Page" href="https://hackbototechtips.github.io/download_centre/windows_optimiser.html">View: Windows Optimiser download page</a>
                     <p><strong>Before you run any scripts on your computer system, I would advise you to back up your system first so that you can restore it back to its previous state in the event that anything goes wrong.</strong></p>
                     <a class="linkbutton" title="Visit Backing Up Windows 10/ 11 guide" href="https://hackbototechtips.github.io/pc_tips/windows_backup.html">View Backing Up Windows 10/ 11 guide</a>
             <h3 id="defrag">How to defragment your Hard Disk Drive.</h3>
@@ -108,7 +108,7 @@
                         <p>Make sure that you agree to the following listed on your screen, once you are sure that you have made a backup of your computer and your files, you can click on the Reset button, this will then start the reset process.</p>
                         <p><strong>This process will take a while depending on the age of your computer system, it should not take any longer than 12 hours, if the process takes more than 12 hours you will need to contact Microsoft Support for help, or you will need to roll your PC back to the backup you made before starting.</strong></p>
         <hr>
-        <p>Page Updated: 11/10/2024</p>
+        <p>Page Updated: 02/03/2025</p>
         <p>Page Author: Hackboto</p>
     </article>
     <footer class="asidefooter" title="Website Footer"> <!-- Footer section -->
